variables.Variables.scala.error
Compilation error:
Variables:5: error: reassignment to val
  pas = compteur;
      ^Variables:9: error: not found: value compteur
while (compteur!=retour) {
       ^